kubernetes/apps/networking/public-gateway/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking-public
  labels:
    gateway.supermorphic.com/access: public
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
