kubernetes/apps/networking/public-gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: public
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: networking-public
spec:
  gatewayClassName: public
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: public
  listeners:
    - name: https
      hostname: plex.lab.supermorphic.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: plex-lab-supermorphic-com-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.supermorphic.com/public-plex: "true"
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
